--- a/apps/public_www/src/app/styles/original/components-sections.css
+++ b/apps/public_www/src/app/styles/original/components-sections.css
@@ -1318,12 +1318,6 @@
     -webkit-mask-size: contain;
   }
 
-  .es-mask-credit-card-danger {
-    background-color: var(--es-color-booking-highlight-icon, #B42318);
-    mask-image: url('/images/credit-cards.svg');
-    -webkit-mask-image: url('/images/credit-cards.svg');
-  }
-
   .es-mask-dollar-danger {
     background-color: var(--es-color-booking-highlight-icon, #B42318);
     mask-image: url('/images/dollar-symbol.svg');
